[package]
name = "todo_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The `serde` crate is for serializing and deserializing Rust data structures.
# The "derive" feature allows us to automatically generate the serialization code.
serde = { version = "1.0", features = ["derive"] }

# `serde_json` is the implementation for the JSON data format.
serde_json = "1.0"
